--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,9 @@ version = "0.1.0"
 description = "A simple FastAPI demo project"
 requires-python = ">=3.11"
 dependencies = [
+    "aiohttp>=3.12.13",
     "fastapi>=0.115.13",
+    "logging>=0.4.9.6",
     "uvicorn[standard]>=0.24.0",
 ]
 
@@ -12,7 +14,7 @@ dependencies = [
 requires = ["hatchling"]
 build-backend = "hatchling.build"
 
-[dependency-groups]
+[project.optional-dependencies]
 dev = [
     "mypy==1.15.0",
     "ruff==0.11.5",
