--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ requires-python = ">=3.11"
 dependencies = [
     "aiohttp>=3.12.13",
     "fastapi>=0.115.13",
+    "httpx>=0.27.0",
     "logging>=0.4.9.6",
     "uvicorn[standard]>=0.24.0",
 ]
